2008-10-31  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Prof.py (_GLUECLAMP.pb_): Added docstring

	* guppy/heapy/Monitor.py (monitor): Added docstring

	* guppy/heapy/UniSet.py (UniSet etc): Made the docstrings of _get_ 
	wording in terms of attributes rather than methods.

	* guppy/heapy/Use.py (_GLUECLAMP_): Added more dir/help

	* guppy/doc/__init__.py : Added more dir support

2008-10-28  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Made explit long
	cast to long for num_poses, to get rid of warning from MSVC.

	* setup.py: Removed extra_compile_args and extra_link_args vars.

	* src/heapy/heapy.h: Removed DL_IMPORT macro usage.

	* src/sets/sets_internal.h: Removed all DL_IMPORT macros.
	  to get rid of warning from MSVC about inconsistent linkage.

2008-10-25  Sverker Nilsson  <sverker@sverker-laptop>

	* setup.py: Removed the extra compile args for MSWindows -
	  they were only there for debugging.

2008-10-24  Sverker Nilsson  <sverker@sverker-laptop>

	* Added debug parameter to hpy().test() and made all test_main
	  functions take that parameter. When true, it will be possible
	  to look into the failure stack with pdb.pm() .

	* Added Chad Austin's patch for MSWINDOWS
	  Made a temp os-determination. Have to check this out.
	  Changed macro FILL to return -1 to get rid of warning in a set init.
	  Made the initfunc in heapyc return an int to get rid of new warning.
	  Moved & renamed macro to NYFILL in new file src/include/guppy.h
	  which is intended to host general public guppy related includes.
	  Made corresponding changes FILL->NYFILL where used.
	
2008-06-18  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/doc/__init__.py (Tab): Added tabs for different help
	browsing environments. 

2008-06-17  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/doc/__init__.py (_GLUECLAMP_.help_instance): Added
	method. Also added Subject class.
