@@ -1,3 +1,9 @@
+2008-11-03  Sverker Nilsson  <sverker@sverker-laptop>
+
+	* guppy/heapy/UniSet.py (UniSet & IdentitySet): Removed several
+	_get_xxx methods and put the definitions directly in properties as
+	lambdas with docstrings (to clean up result of help()) . 
+
 2008-10-31  Sverker Nilsson  <sverker@sverker-laptop>
 
 	* guppy/heapy/Prof.py (_GLUECLAMP.pb_): Added docstring
